assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Maitree:wght@200;500&family=Prompt:wght@200;300;400&family=Rokkitt:wght@100&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

html,body{
    overflow-x: hidden;
}

header {
    background-color: #f5a8e4;
    height: 100px;
    width: 100%;
    color: #313E47;
}

body {
    font-family: 'Maitree', serif;
    font-weight: 200;
    color: #313E47;
}

h1 {
    font-family: 'Prompt', serif;
    font-weight: 300;
    font-size: 200%;
    letter-spacing: 6px;
}

h2,
nav {
    font-family: 'Prompt', serif;
    font-weight: 200;
}

h3 {
    font-family: 'Rokkitt', serif;
    font-weight: 100;
    color: #313E47;
}

/* Postion nav element absolute */
nav {
    position: absolute;
    top: 10px;
    right: 20px;
}

#logo-and-title {
    float: left;
    width: 50%;
    line-height: 35px;
    margin-top: 2vmin;
}

#logo {
    float: left;
    height: 60px;
    padding: 0 2vmin;
}

#menu {
    line-height: 75px;
}

#menu li {
    font-size: 1.2em;
    display: inline-block;
    margin-right: 40px;
    list-style-type: none;
}


#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #313e47;
    opacity: 0.6;
}

.active {
    font-weight: 400;
    text-shadow: 0.5px 0.5px lightgray;
}

#hero-outer {
    height: 400px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 100%;
    width: 100%;
    background: url('../images/hero-image.jpg') no-repeat center center;
}

#sign-up-circle {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    text-align: center;
    font-size: 0.9em;
    background-color: #B8D3D0;
    bottom: 2vmin;
    right: 6vmin;
    position: absolute;
    border: 2px solid #313E47;
    opacity: 0.9;
}

#sign-up-circle:hover {
    font-weight: 500;
    width: 151px;
    height: 151px;
    border: 3px solid grey;
    opacity: 0.9;

}

#sign-up-text {
    margin: 10px;
    padding-top: 20px;
}

.info-section {
    width: 100%;
    height: 425px;
    margin: 20px 0 50px 0;
    text-align: center;
}

.info-section h1 {
    margin-bottom: 20px;
    line-height: 75px;
    font-size: 200%;
    letter-spacing: 4px;
}

.info-container {
    width: 50%;
    height: 77%;
    background-color: #B8D3D0;
    border-radius: 20px;
    opacity: 0.7;
    float: left;
    margin-left: 7.5%;
    position: relative;
}

.info-container p {
    position: absolute;
    margin: 0 5%;
    top: 50%;
    transform: translateY(-50%);
    font-size: 120%;
    text-align: justify;

}

.info-images {
    aspect-ratio: 1 / 1;
    height: 72%;
    object-fit: cover;
    margin-right: 7.5%;
    border-radius: 50%;
    float: right;
    border: 10px solid #B8D3D0
}

#info-image-middle {
    aspect-ratio: 1 / 1;
    height: 72%;
    object-fit: cover;
    margin-left: 7.5%;
    margin-right: 2%;
    border-radius: 50%;
    float: left;
    border: 10px solid #B8D3D0
}

#info-container-middle {
    width: 50%;
    height: 77%;
    background-color: #B8D3D0;
    border-radius: 20px;
    opacity: 0.7;
    float: right;
    margin-right: 7.5%;
    position: relative;
}

#info-container-middle ul {
    position: absolute;
    width: 100%;
    margin: 0 5%;
    top: 50%;
    transform: translateY(-50%);
}

#info-container-middle i {
    margin-right: 20px;
}

#info-container-middle li {
    text-align: left;
    /* margin-left: 45px; */
    margin: 0 auto;
    font-size: 120%;
    list-style-type: none;
    line-height: 45px;
}

#info-section-bottom {
    width: 100%;
    height: 425px;
    margin: 20px 0 75px 0;
    text-align: center;
}

#info-section-bottom h1 {
    margin-bottom: 20px;
    line-height: 75px;
    font-size: 200%;
}

footer {
    position: fixed;
    bottom: 0;
    height: 7vmin;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: #f5a8e4;
    color: #313e47;
    text-align: center;
    overflow: hidden;
}

.social-networks>li {
    display: inline;
}

.social-networks i {
    font-size: 160%;
    margin: 1.5% 3.5% 0 1.5%;
    color: #3a3a3a;
}

.social-networks i:hover {
    color: rgba(0, 0, 0, 0.3);
}


@media screen and (max-width:1200px) {

    h1 {
        font-size: 150%;
        letter-spacing: 4px;
    }
    h3 {
        font-size: 90%;
    }
    #menu li {
        font-size: 100%;
        margin-right: 20px;
    }
    .info-container {
        width: 55%;
        margin-left: 3%;
    }
    .info-container p {
        font-size: 107.5%;
    }

    .info-images {
        margin-right: 3%;
    }

    #info-container-middle {
        width: 55%;
        margin-right: 3%;
    }

    #info-image-middle {
        margin-left: 3%;
    }

    #info-container-middle li {
        font-size: 110%;
        margin-right: 7.5%;
    }
}

@media screen and (max-width: 950px) {
    #hero-outer {
        height: 300px;
    }
    #sign-up-circle {
        width: 100px;
        height: 100px;
        font-size: 0.6em;
        background-color: #B8D3D0;
        bottom: 1vmin;
        right: 1vmin;
        position: absolute;
        border: 2px solid #313E47;
        opacity: 0.9;
    }

    #sign-up-text {
        padding-top: 10px;
    }
    .info-section {
        height: 115vmin;
    }
    .info-section h1{
        line-height: 50px;
        margin-bottom: 3vmin;
        font-size: 6vmin;
        letter-spacing: 2px;
    }

    .info-container {
        float: none;
        margin: 0 auto;
        width: 95%;
        font-size: 2.75vmin;
        height: 50vmin
    }
    .info-images {
        float: none;
        height: 50vmin;
        margin: 0 auto;
        margin-top: 20px;
    }

    #info-image-middle {
        float: none;
        height: 50vmin;
        margin: 0 auto;
    }

    #info-container-middle {
        float: none;
        margin: 0 auto;
        width: 95%;
        font-size: 2.75vmin;
        height: 50vmin;
        margin-top: 10px;   
    }

    #info-container-middle li {
        line-height: 6vmin;
    }

    #info-section-bottom{
        height: 115vmin;
    }
    #info-section-bottom h1 {
        margin-bottom: 3vmin;
        line-height: 50px;
        font-size: 5vmin;
        letter-spacing: 2px;
    }
    footer {
        height: 50px;
    }
}

@media screen and (max-width: 750px) {
    h1 {
        font-size: 100%;
        letter-spacing: 1px;
        margin-top: 15px;
    }
     h3 {
        font-size: 75%;
    }
    #logo-and-title {
        width: 65%;
        margin-top: 13px;
        line-height: 25px;
    }
     #logo {
        height:50px;
        margin-top: 7.5px;
    }
     nav {
        position: inherit;
        float: right;
        margin-top: 8px;
    }
  #menu {
        line-height: 20px;
    } 
    #menu li {
        font-size: 0.85rem;
        padding: 5px;
        display: block;
    }
    #info-section-bottom{
        height: 120vmin;
    }
    footer {
        height: 45px;
    }
    .social-networks i {
        font-size: 140%;
        margin: 15px 15px 0 15px;
        color: #3a3a3a;
    }
}

